--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,6 +12,32 @@ commands:
               curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
               unzip awscliv2.zip
               sudo ./aws/install
+  install_terraform:
+      description: Install Terraform
+      steps:
+        - run:
+            name: Install Terraform
+            command: |
+              curl -LO "https://releases.hashicorp.com/terraform/1.0.0/terraform_1.0.0_linux_amd64.zip"
+              unzip terraform_1.0.0_linux_amd64.zip
+              sudo mv terraform /usr/local/bin/
+              terraform -v
+  install_kubectl:
+      description: Install kubectl
+      steps:
+        - run:
+            name: Install kubectl
+            command: |
+              curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl"
+              chmod +x ./kubectl
+              sudo mv ./kubectl /usr/local/bin/kubectl
+  configure_kubectl:
+      description: Configure kubectl
+      steps:
+        - run:
+            name: Configure kubectl
+            command: |
+              aws eks --region $AWS_REGION update-kubeconfig --name $EKS_CLUSTER_NAME
 jobs:
   init:
     working_directory: /tmp/project
@@ -81,16 +107,6 @@ jobs:
     steps:
       - attach_workspace:
           at: .
-      # - run:
-      #     name: Install kubectl
-      #     command: |
-      #       curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl"
-      #       chmod +x ./kubectl
-      #       sudo mv ./kubectl /usr/local/bin/kubectl
-      # - run:
-      #     name: Configure kubectl
-      #     command: |
-      #       aws eks --region $AWS_REGION update-kubeconfig --name $EKS_CLUSTER_NAME
       - run:
           name: terraform destroy
           command: |
@@ -153,12 +169,8 @@ jobs:
     steps:
       - checkout
       - install_awscli
-      - run:
-          name: Install kubectl
-          command: |
-            curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl"
-            chmod +x ./kubectl
-            sudo mv ./kubectl /usr/local/bin/kubectl
+      - install_kubectl
+      - configure_kubectl
       - run:
           name: Configure kubectl
           command: |
@@ -181,16 +193,9 @@ jobs:
           at: .
       - checkout
       - install_awscli
-      - run:
-          name: Install kubectl
-          command: |
-            curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl"
-            chmod +x ./kubectl
-            sudo mv ./kubectl /usr/local/bin/kubectl
-      - run:
-          name: Configure kubectl
-          command: |
-            aws eks --region $AWS_REGION update-kubeconfig --name $EKS_CLUSTER_NAME
+      - install_terraform
+      - install_kubectl
+      - configure_kubectl
       - run:
           name: Terraform init
           command: |
@@ -208,16 +213,9 @@ jobs:
           at: .
       - checkout
       - install_awscli
-      - run:
-          name: Install kubectl
-          command: |
-            curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl"
-            chmod +x ./kubectl
-            sudo mv ./kubectl /usr/local/bin/kubectl
-      - run:
-          name: Configure kubectl
-          command: |
-            aws eks --region $AWS_REGION update-kubeconfig --name $EKS_CLUSTER_NAME
+      - install_kubectl
+      - configure_kubectl
+      - install_terraform
       - run:
           name: Terraform plan
           command: |
@@ -236,16 +234,9 @@ jobs:
           at: .
       - checkout
       - install_awscli
-      - run:
-          name: Install kubectl
-          command: |
-            curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl"
-            chmod +x ./kubectl
-            sudo mv ./kubectl /usr/local/bin/kubectl
-      - run:
-          name: Configure kubectl
-          command: |
-            aws eks --region $AWS_REGION update-kubeconfig --name $EKS_CLUSTER_NAME
+      - install_kubectl
+      - configure_kubectl
+      - install_terraform
       - run:
           name: Terraform apply
           command: |
@@ -263,16 +254,9 @@ jobs:
           at: .
       - checkout
       - install_awscli
-      - run:
-          name: Install kubectl
-          command: |
-            curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl"
-            chmod +x ./kubectl
-            sudo mv ./kubectl /usr/local/bin/kubectl
-      - run:
-          name: Configure kubectl
-          command: |
-            aws eks --region $AWS_REGION update-kubeconfig --name $EKS_CLUSTER_NAME
+      - install_kubectl
+      - configure_kubectl
+      - install_terraform
       - run:
           name: terraform create destroy plan
           command: |
@@ -290,16 +274,9 @@ jobs:
           at: .
       - checkout
       - install_awscli
-      - run:
-          name: Install kubectl
-          command: |
-            curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl"
-            chmod +x ./kubectl
-            sudo mv ./kubectl /usr/local/bin/kubectl
-      - run:
-          name: Configure kubectl
-          command: |
-            aws eks --region $AWS_REGION update-kubeconfig --name $EKS_CLUSTER_NAME
+      - install_kubectl
+      - configure_kubectl
+      - install_terraform
       - run:
           name: terraform destroy
           command: |
@@ -313,16 +290,8 @@ jobs:
       steps:
         - checkout
         - install_awscli
-        - run:
-            name: Install kubectl
-            command: |
-              curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl"
-              chmod +x ./kubectl
-              sudo mv ./kubectl /usr/local/bin/kubectl
-        - run:
-            name: Configure kubectl
-            command: |
-              aws eks --region $AWS_REGION update-kubeconfig --name $EKS_CLUSTER_NAME
+        - install_kubectl
+        - configure_kubectl
         - run:
             name: Delete from EKS cluster
             command: |
@@ -340,16 +309,8 @@ jobs:
     steps:
       - checkout
       - install_awscli
-      - run:
-          name: Install kubectl
-          command: |
-            curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl"
-            chmod +x ./kubectl
-            sudo mv ./kubectl /usr/local/bin/kubectl
-      - run:
-          name: Configure kubectl
-          command: |
-            aws eks --region $AWS_REGION update-kubeconfig --name $EKS_CLUSTER_NAME
+      - install_kubectl
+      - configure_kubectl
       - run:
           name: Deploy sock-shop to EKS cluster
           command: |
@@ -369,16 +330,8 @@ jobs:
     steps:
       - checkout
       - install_awscli
-      - run:
-          name: Install kubectl
-          command: |
-            curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl"
-            chmod +x ./kubectl
-            sudo mv ./kubectl /usr/local/bin/kubectl
-      - run:
-          name: Configure kubectl
-          command: |
-            aws eks --region $AWS_REGION update-kubeconfig --name $EKS_CLUSTER_NAME
+      - install_kubectl
+      - configure_kubectl
       - run:
           name: Deploy image to EKS cluster
           command: |
