--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,8 +10,8 @@ commands:
             name: Install AWS CLI v2
             command: |
               curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
-              unzip awscliv2.zip
-              sudo ./aws/install
+              unzip -u awscliv2.zip
+              sudo ./aws/install 
   install_terraform:
       description: Install Terraform
       steps:
