--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -220,7 +220,9 @@ jobs:
           name: Terraform plan
           command: |
             cd terraform-domain/
-            terraform plan -out tf-apply -var="encrypted-sock-shop-loadbalancer=$(kubectl get service front-end -n sock-shop -o jsonpath='{.status.loadBalancer.ingress[0].hostname}')" -var="encrypted-voting-app-loadbalancer=$(kubectl get service voting-service -n voting-application -o jsonpath='{.status.loadBalancer.ingress[0].hostname}')"
+            export SOCK_SHOP="aws kms decrypt --cipher-text-blob $(kubectl get service front-end -n sock-shop -o jsonpath='{.status.loadBalancer.ingress[0].hostname}')"
+            export VOTING_APP="aws kms decrypt --cipher-text-blob $(kubectl get service voting-service -n voting-application -o jsonpath='{.status.loadBalancer.ingress[0].hostname}')"
+            terraform plan -out tf-apply -var="encrypted-sock-shop-loadbalancer=$SOCK_SHOP" -var="encrypted-voting-app-loadbalancer=$VOTING_APP"
       - persist_to_workspace:
           root: .
           paths:
