--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -176,9 +176,9 @@ jobs:
           command: |
             aws eks --region $AWS_REGION update-kubeconfig --name $EKS_CLUSTER_NAME
       - run:
-          name: Deploy Docker image to EKS cluster
+          name: Deploy image to EKS cluster
           command: |
-            kubectl apply -f votingapp-kubernetes
+            kubectl apply -f votingapp-kubernetes/app-voting-kubernetes.yaml
             sleep 300
             kubectl get pods
             kubectl get services
@@ -368,26 +368,26 @@ workflows:
       # - delete-all-pods:
       #     requires: [hold-destroy]  
       # - build-my-app:
-      #     requires: [apply]
-      # - deploy-my-app:
-      #     requires: [build-my-app]
+          # requires: [apply]
+      - deploy-my-app
+          # requires: [build-my-app]
       # - sock-shop:
       #     requires: [apply]
       # - prometheus:
       #     requires: [apply]
-      - configure-domain
-          # requires: [sock-shop, prometheus, deploy-my-app]
-      - plan-domain:
-          requires: [configure-domain]
-      - hold-apply-domain:
-          type: approval
-          requires: [plan-domain]
-      - apply-domain:
-          requires: [hold-apply-domain]
-      - plan-destroy-domain:
-          requires: [apply-domain]
-      - hold-destroy-domain:
-          type: approval
-          requires: [plan-destroy-domain]
-      - destroy-domain:
-          requires: [hold-destroy-domain]
+      # - configure-domain
+      #     # requires: [sock-shop, prometheus, deploy-my-app]
+      # - plan-domain:
+      #     requires: [configure-domain]
+      # - hold-apply-domain:
+      #     type: approval
+      #     requires: [plan-domain]
+      # - apply-domain:
+      #     requires: [hold-apply-domain]
+      # - plan-destroy-domain:
+      #     requires: [apply-domain]
+      # - hold-destroy-domain:
+      #     type: approval
+      #     requires: [plan-destroy-domain]
+      # - destroy-domain:
+      #     requires: [hold-destroy-domain]
