--- a/votingapp-kubernetes/app-voting-kubernetes.yaml
+++ b/votingapp-kubernetes/app-voting-kubernetes.yaml
@@ -1,230 +1,15 @@
-# ---
-# apiVersion: v1
-# kind: Namespace
-# metadata:
-#   name: voting-application
-
-# ---
-# apiVersion: apps/v1
-# kind: Deployment
-# metadata:
-#   name: result-app-deploy
-#   namespace: voting-application
-#   labels:
-#     name: result-app-deploy
-#     app: demo-voting-app
-# spec:
-#   replicas: 1
-#   selector:
-#     matchLabels:
-#       name: result-app-pod
-#       app: demo-voting-app
-#   template:
-#     metadata:
-#       name: result-app-pod
-#       labels:
-#         name: result-app-pod
-#         app: demo-voting-app
-#     spec:
-#       containers:
-#         - name: result-app
-#           image: kodekloud/examplevotingapp_result:v1
-#           ports:
-#             - containerPort: 80
-
-# ---
-# apiVersion: v1
-# kind: Service
-# metadata:
-#   name: result-service
-#   namespace: voting-application
-#   labels:
-#     name: result-service
-#     app: demo-voting-app
-# spec:
-#   type: NodePort
-#   ports:
-#     - port: 80
-#       targetPort: 80
-#       # nodePort: 30005
-#   selector:
-#     name: result-app-pod
-#     app: demo-voting-app
-
-# ---
-# apiVersion: apps/v1
-# kind: Deployment
-# metadata:
-#   name: voting-app-deploy
-#   namespace: voting-application
-#   labels:
-#     name: voting-app-deploy
-#     app: demo-voting-app
-# spec:
-#   replicas: 1
-#   selector:
-#     matchLabels:
-#       name: voting-app-pod
-#       app: demo-voting-app
-#   template:
-#     metadata:
-#       name: voting-app-pod
-#       labels:
-#         name: voting-app-pod
-#         app: demo-voting-app
-#     spec:
-#       containers:
-#         - name: voting-app
-#           image: kodekloud/examplevotingapp_vote:v1
-#           ports:
-#             - containerPort: 80
-
-# ---
-# apiVersion: v1
-# kind: Service
-# metadata:
-#   name: voting-service
-#   namespace: voting-application
-#   labels:
-#     name: voting-service
-#     app: demo-voting-app
-# spec:
-#   type: LoadBalancer
-#   ports:
-#     - port: 80
-#       targetPort: 80
-#       nodePort: 30004
-#   selector:
-#     name: voting-app-pod
-#     app: demo-voting-app
-
-# ---
-# apiVersion: apps/v1
-# kind: Deployment
-# metadata:
-#   name: postgres-deploy
-#   namespace: voting-application
-#   labels:
-#     name: postgres-deploy
-#     app: demo-voting-app
-# spec:
-#   replicas: 1
-#   selector:
-#     matchLabels:
-#       name: postgres-pod
-#       app: demo-voting-app
-#   template:
-#     metadata:
-#       name: postgres-pod
-#       labels:
-#         name: postgres-pod
-#         app: demo-voting-app
-#     spec:
-#       containers:
-#         - name: postgres
-#           image: postgres
-#           ports:
-#             - containerPort: 5432
-#           env:
-#             - name: POSTGRES_USER
-#               value: "postgres"
-#             - name: POSTGRES_PASSWORD
-#               value: "postgres"
-#             - name: POSTGRES_HOST_AUTH_METHOD
-#               value: trust
-# ---
-# apiVersion: v1
-# kind: Service
-# metadata:
-#   name: db
-#   namespace: voting-application
-#   labels:
-#     name: postgres-service
-#     app: demo-voting-app
-# spec:
-#   ports:
-#     - port: 5432
-#       targetPort: 5432
-#   selector:
-#     name: postgres-pod
-#     app: demo-voting-app
-
-# ---
-# apiVersion: apps/v1
-# kind: Deployment
-# metadata:
-#   name: redis-deploy
-#   namespace: voting-application
-#   labels:
-#     name: redis-deploy
-#     app: demo-voting-app
-# spec:
-#   replicas: 1
-#   selector:
-#     matchLabels:
-#       name: redis-pod
-#       app: demo-voting-app
-#   template:
-#     metadata:
-#       name: redis-pod
-#       labels:
-#         name: redis-pod
-#         app: demo-voting-app
-#     spec:
-#       containers:
-#         - name: redis
-#           image: redis
-#           ports:
-#             - containerPort: 6379
-
-# ---
-# apiVersion: v1
-# kind: Service
-# metadata:
-#   name: redis
-#   namespace: voting-application
-#   labels:
-#     name: redis-service
-#     app: demo-voting-app
-# spec:
-#   ports:
-#     - port: 6379
-#       targetPort: 6379
-#   selector:
-#     name: redis-pod
-#     app: demo-voting-app
-
-# ---
-# apiVersion: apps/v1
-# kind: Deployment
-# metadata:
-#   name: worker-app-deploy
-#   namespace: voting-application
-#   labels:
-#     name: worker-app-deploy
-#     app: demo-voting-app
-# spec:
-#   replicas: 1
-#   selector:
-#     matchLabels:
-#       name: worker-app-pod
-#       app: demo-voting-app
-#   template:
-#     metadata:
-#       name: worker-app-pod
-#       labels:
-#         name: worker-app-pod
-#         app: demo-voting-app
-#     spec:
-#       containers:
-#         - name: worker-app
-#           image: kodekloud/examplevotingapp_worker:v1
+---
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: voting-application
 
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: result-app-deploy
+  namespace: voting-application
   labels:
     name: result-app-deploy
     app: demo-voting-app
@@ -252,13 +37,16 @@ apiVersion: v1
 kind: Service
 metadata:
   name: result-service
+  namespace: voting-application
   labels:
     name: result-service
     app: demo-voting-app
 spec:
+  type: NodePort
   ports:
     - port: 80
       targetPort: 80
+      nodePort: 30005
   selector:
     name: result-app-pod
     app: demo-voting-app
@@ -268,6 +56,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: voting-app-deploy
+  namespace: voting-application
   labels:
     name: voting-app-deploy
     app: demo-voting-app
@@ -289,18 +78,22 @@ spec:
           image: kodekloud/examplevotingapp_vote:v1
           ports:
             - containerPort: 80
+
 ---
 apiVersion: v1
 kind: Service
 metadata:
   name: voting-service
+  namespace: voting-application
   labels:
     name: voting-service
     app: demo-voting-app
 spec:
+  type: LoadBalancer
   ports:
     - port: 80
       targetPort: 80
+      # nodePort: 30004
   selector:
     name: voting-app-pod
     app: demo-voting-app
@@ -310,6 +103,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: postgres-deploy
+  namespace: voting-application
   labels:
     name: postgres-deploy
     app: demo-voting-app
@@ -343,6 +137,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: db
+  namespace: voting-application
   labels:
     name: postgres-service
     app: demo-voting-app
@@ -359,6 +154,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: redis-deploy
+  namespace: voting-application
   labels:
     name: redis-deploy
     app: demo-voting-app
@@ -386,6 +182,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: redis
+  namespace: voting-application
   labels:
     name: redis-service
     app: demo-voting-app
@@ -402,6 +199,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: worker-app-deploy
+  namespace: voting-application
   labels:
     name: worker-app-deploy
     app: demo-voting-app
@@ -421,3 +219,204 @@ spec:
       containers:
         - name: worker-app
           image: kodekloud/examplevotingapp_worker:v1
+
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: result-app-deploy
+  labels:
+    name: result-app-deploy
+    app: demo-voting-app
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      name: result-app-pod
+      app: demo-voting-app
+  template:
+    metadata:
+      name: result-app-pod
+      labels:
+        name: result-app-pod
+        app: demo-voting-app
+    spec:
+      containers:
+        - name: result-app
+          image: kodekloud/examplevotingapp_result:v1
+          ports:
+            - containerPort: 80
+# ---
+# apiVersion: v1
+# kind: Service
+# metadata:
+#   name: result-service
+#   labels:
+#     name: result-service
+#     app: demo-voting-app
+# spec:
+#   ports:
+#     - port: 80
+#       targetPort: 80
+#   selector:
+#     name: result-app-pod
+#     app: demo-voting-app
+
+# ---
+# apiVersion: apps/v1
+# kind: Deployment
+# metadata:
+#   name: voting-app-deploy
+#   labels:
+#     name: voting-app-deploy
+#     app: demo-voting-app
+# spec:
+#   replicas: 1
+#   selector:
+#     matchLabels:
+#       name: voting-app-pod
+#       app: demo-voting-app
+#   template:
+#     metadata:
+#       name: voting-app-pod
+#       labels:
+#         name: voting-app-pod
+#         app: demo-voting-app
+#     spec:
+#       containers:
+#         - name: voting-app
+#           image: kodekloud/examplevotingapp_vote:v1
+#           ports:
+#             - containerPort: 80
+# ---
+# apiVersion: v1
+# kind: Service
+# metadata:
+#   name: voting-service
+#   labels:
+#     name: voting-service
+#     app: demo-voting-app
+# spec:
+#   ports:
+#     - port: 80
+#       targetPort: 80
+#   selector:
+#     name: voting-app-pod
+#     app: demo-voting-app
+
+# ---
+# apiVersion: apps/v1
+# kind: Deployment
+# metadata:
+#   name: postgres-deploy
+#   labels:
+#     name: postgres-deploy
+#     app: demo-voting-app
+# spec:
+#   replicas: 1
+#   selector:
+#     matchLabels:
+#       name: postgres-pod
+#       app: demo-voting-app
+#   template:
+#     metadata:
+#       name: postgres-pod
+#       labels:
+#         name: postgres-pod
+#         app: demo-voting-app
+#     spec:
+#       containers:
+#         - name: postgres
+#           image: postgres
+#           ports:
+#             - containerPort: 5432
+#           env:
+#             - name: POSTGRES_USER
+#               value: "postgres"
+#             - name: POSTGRES_PASSWORD
+#               value: "postgres"
+#             - name: POSTGRES_HOST_AUTH_METHOD
+#               value: trust
+# ---
+# apiVersion: v1
+# kind: Service
+# metadata:
+#   name: db
+#   labels:
+#     name: postgres-service
+#     app: demo-voting-app
+# spec:
+#   ports:
+#     - port: 5432
+#       targetPort: 5432
+#   selector:
+#     name: postgres-pod
+#     app: demo-voting-app
+
+# ---
+# apiVersion: apps/v1
+# kind: Deployment
+# metadata:
+#   name: redis-deploy
+#   labels:
+#     name: redis-deploy
+#     app: demo-voting-app
+# spec:
+#   replicas: 1
+#   selector:
+#     matchLabels:
+#       name: redis-pod
+#       app: demo-voting-app
+#   template:
+#     metadata:
+#       name: redis-pod
+#       labels:
+#         name: redis-pod
+#         app: demo-voting-app
+#     spec:
+#       containers:
+#         - name: redis
+#           image: redis
+#           ports:
+#             - containerPort: 6379
+
+# ---
+# apiVersion: v1
+# kind: Service
+# metadata:
+#   name: redis
+#   labels:
+#     name: redis-service
+#     app: demo-voting-app
+# spec:
+#   ports:
+#     - port: 6379
+#       targetPort: 6379
+#   selector:
+#     name: redis-pod
+#     app: demo-voting-app
+
+# ---
+# apiVersion: apps/v1
+# kind: Deployment
+# metadata:
+#   name: worker-app-deploy
+#   labels:
+#     name: worker-app-deploy
+#     app: demo-voting-app
+# spec:
+#   replicas: 1
+#   selector:
+#     matchLabels:
+#       name: worker-app-pod
+#       app: demo-voting-app
+#   template:
+#     metadata:
+#       name: worker-app-pod
+#       labels:
+#         name: worker-app-pod
+#         app: demo-voting-app
+#     spec:
+#       containers:
+#         - name: worker-app
+#           image: kodekloud/examplevotingapp_worker:v1
